Intro2Java: Added sealed/permits